--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,13 +3,13 @@
 
 {% block content %}
     <div class="min-h-screen bg-secondary-100 flex flex-col justify-center py-4">
-        <div class="container px-5 py-8 mx-auto flex justify-center">
-            <form method="post" class="relative py-4 sm:max-w-xl sm:mx-auto font-robotoSlab">
+        <div class="container px-4 py-8 mx-auto flex justify-center">
+            <form method="post" class="relative py-4 sm:max-w-xl sm:mx-auto">
                 <div class="absolute inset-0 bg-gradient-to-r from-primary-300 to-primary-600 shadow-lg transform -skew-y-4
                     sm:skew-y-4 sm:-rotate-6 rounded-3xl ">
                 </div>
 
-                <div class="relative px-10 py-10 bg-white shadow-lg rounded-3xl sm:p-20" >
+                <div class="relative p-6 bg-white shadow-lg rounded-3xl sm:px-8 sm:py-16" >
                     <div class="max-w-md mx-auto">
                         {% csrf_token %}
                         <div>
@@ -30,7 +30,7 @@
                                 <div class="relative">
                                     <label for="inputUsername" class="text-secondary-800 text-sm ">Nom d'utilisateur</label>
                                     <input autocomplete="off" id="inputUsername" name="username" type="text" value="{{ form.username.value|default:'' }}"
-                                        class="peer p-6 placeholder-transparent rounded h-4 text-sm w-full border-secondary-300
+                                        class="peer px-6 py-4 placeholder-transparent rounded h-4 text-sm w-full border-secondary-300
                                             text-secondary-700 focus:outline-none focus:border-primary-600 {%if form.username.errors %}is-invalid{% endif %}"
                                         placeholder="Nom d'utilisateur" />
                                     {% if form.username.errors %}
@@ -41,7 +41,7 @@
                                 </div>
                                 <div class="relative">
                                     <label for="inputPassword" class="text-secondary-800 text-sm"> Mot de passe </label>
-                                    <input autocomplete="off"  id="inputPassword" name="password" type="password" class="peer p-6 placeholder-transparent
+                                    <input autocomplete="off" id="inputPassword" name="password" type="password" class="peer px-6 py-4 placeholder-transparent
                                         h-4 text-sm w-full rounded border-secondary-300 text-secondary-900 focus:outline-none focus:border-primary-600
                                         {% if form.password.errors %}is-invalid{% endif %}" placeholder="Mot de passe" />
                                     {% if form.password.errors %}
@@ -50,11 +50,17 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                                <div class="flex justify-center ">
-                                    <button type="submit" id="login_button" class="mt-4 w-full bg-primary-500 text-white rounded-md px-2 py-1 hover:bg-primary-700">
-                                        Connexion
-                                    </button>
-                                </div>
+
+                                <button type="submit"  id="login_button" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm
+                                    tracking-widest rounded-md text-white bg-primary-700 hover:bg-primary-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                                    <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                                        <!-- Heroicon name: solid/lock-closed -->
+                                        <svg class="h-5 w-5 text-primary-500 group-hover:text-primary-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                            <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+                                        </svg>
+                                    </span>
+                                    Connexion
+                                </button>
                             </div>
                         </div>
                     </div>
