--- a/theme/templates/base_tailwind.html
+++ b/theme/templates/base_tailwind.html
@@ -26,7 +26,7 @@
 
     </head>
 
-    <body class="antialiased font-sans bg-gray-200">
+    <body>
         {% block content %}
 
         {% endblock %}
