alpine js menu hamburger when mobile complete

--- a/crud/templates/search_bar.html
+++ b/crud/templates/search_bar.html
@@ -9,6 +9,6 @@
             </button>
         </div>
         <input id="search" name="q" aria-label="Search" type="text" placeholder="Search"
-            class="block rounded text-sm p-2 border border-transparent focus:outline-none focus:bg-white focus:ring-white focus:border-white focus:placeholder-secondary-500 ...">
+            class="block rounded text-sm p-2 border border-secondary-400 focus:outline-none focus:bg-white focus:ring-white focus:border-secondary-600 focus:placeholder-secondary-500 ...">
     </div>
 </form>
