logout button aligned and text red on hover

--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -203,11 +203,11 @@
                                 </div>
                             </div>
                             <!--logout-->
-                            <div class="pt-8">
+                            <div class="space-y-1">
                                 <div class="text-gray-900 cursor-pointer">
                                     <a href="{% url 'logout'%}" id="logout">
-                                        <button type="button" class="inline-flex justify-center text-secondary-600 rounded-md border border-transparent hover:border-secondary-800 px-6 ml-2 py-1 text-sm font-medium shadow-sm hover:text-secondary-900 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:w-auto">
-                                            <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                        <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                                            <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
                                             </svg>
                                             <span class="flex-1">
@@ -412,11 +412,11 @@
                                 </div>
                             </div>
                             <!--logout-->
-                            <div class="pt-8">
+                            <div class="space-y-1">
                                 <div class="text-gray-900 cursor-pointer">
                                     <a href="{% url 'logout'%}" id="logout">
-                                        <button type="button" class="inline-flex justify-center text-secondary-600 rounded-md border border-transparent hover:border-secondary-800 px-6 ml-2 py-1 text-sm font-medium shadow-sm hover:text-secondary-900 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:w-auto">
-                                            <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                        <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                                            <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
                                             </svg>
                                             <span class="flex-1">
