logout at bottom and responsive working

--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -423,24 +423,22 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <!--logout-->
-                                    <div class="space-y-1">
-                                        <div class="text-gray-900 cursor-pointer">
-                                            <a href="{% url 'logout'%}" id="logout">
-                                                <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                                                    <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
-                                                    </svg>
-                                                    <span class="flex-1">
-                                                        logout
-                                                    </span>
-
-                                                </button>
-                                            </a>
-                                        </div>
-                                    </div>
-
                                 </nav>
+                                <!--logout-->
+                                <div class="fixed bottom-0 w-64 flex-shrink-0 flex border-t border-gray-200 p-2">
+                                    <div class="text-gray-900 cursor-pointer">
+                                        <a href="{% url 'logout'%}" id="logout">
+                                            <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                                                <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
+                                                </svg>
+                                                <span class="flex-1">
+                                                    logout
+                                                </span>
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -472,9 +470,9 @@
                         <div class="w-full flex-col md:flex-row md:items-center px-2 py-2 md:py-6">
                             <div class="flex ">
                                 <!--Button to open the sidebar-->
-                                <button class="md:p-1 md:mr-4" :class="{ 'hidden': sidebarOpen }" @click="sidebarOpen = !sidebarOpen">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                                <button class="md:p-1 md:mr-4 flex items-start" :class="{ 'hidden': sidebarOpen }" @click="sidebarOpen = !sidebarOpen">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7" />
                                     </svg>
                                 </button>
                                 <div class="md:flex-auto ml-2">
