--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -202,25 +202,24 @@
                                     </a>
                                 </div>
                             </div>
-                            <!--logout-->
-                            <div class="space-y-1">
-                                <div class="text-gray-900 cursor-pointer">
-                                    <a href="{% url 'logout'%}" id="logout">
-                                        <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                                            <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
-                                            </svg>
-                                            <span class="flex-1">
-                                                logout
-                                            </span>
-
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
                         </nav>
-                    </div>
+                        <!--logout-->
+                        <div class="fixed bottom-0 w-64 flex-shrink-0 flex border-t border-gray-200 p-2">
+                            <div class="text-gray-900 cursor-pointer">
+                                <a href="{% url 'logout'%}" id="logout">
+                                    <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                                        <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
+                                        </svg>
+                                        <span class="flex-1">
+                                            logout
+                                        </span>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
 
+                    </div>
                 </div>
 
                 <div class="flex-shrink-0 w-14">
@@ -231,19 +230,17 @@
 
             <!-- Static sidebar for desktop -->
             <div x-data="{ sidebarOpen: true }" class="flex overflow-y-hidden h-screen">
-                <div class="hidden md:flex md:flex-col md:fixed md:inset-y-0">
 
-                    <!-- Sidebar component, swap this element with another sidebar if you like -->
+                <!-- Sidebar component -->
+                <div class="hidden md:flex md:flex-col md:fixed md:inset-y-0">
 
                     <div class="w-64 flex-shrink-0 border-r transition-all duration-300" :class="{ '-ml-64': !sidebarOpen }">
                         <div  class="flex-1 flex flex-col min-h-0 border-r border-gray-200 bg-white">
                             <div class="flex-1 flex flex-col pt-5 pb-4 overflow-y-auto ">
-
-
                                 <div class="flex justify-between items-center flex-shrink-0 px-4">
                                     <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg" alt="Workflow">
                                     <!--Button to Collapse the sidebar-->
-                                    <button @click="sidebarOpen = !sidebarOpen">
+                                    <button class="text-secondary-400" @click="sidebarOpen = !sidebarOpen">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 19l-7-7 7-7m8 14l-7-7 7-7" />
                                         </svg>
@@ -429,7 +426,7 @@
                                     <div class="text-gray-900 cursor-pointer">
                                         <a href="{% url 'logout'%}" id="logout">
                                             <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                                                <svg class="mr-3 flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                                <svg class="mr-3 flex-shrink-0 h-6 w-6 text-secondary-400 group-hover:text-red-500" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
                                                 </svg>
                                                 <span class="flex-1">
@@ -450,18 +447,12 @@
                         <!--button to open mobile menu-->
                         <button type="button" class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" @click="open = true">
                             <span class="sr-only">Open sidebar</span>
-                            <svg class="h-6 w-6" x-description="Heroicon name: outline/menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <svg class="h-6 w-6 " x-description="Heroicon name: outline/menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                             </svg>
                         </button>
                     </div>
 
-
-                    <!--main content -->
-                    {% comment %} <main class="flex py-6">
-
-
-                                <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8"> {% endcomment %}
                     <!-- Replace with your content -->
 
 
@@ -470,7 +461,7 @@
                         <div class="w-full flex-col md:flex-row md:items-center px-2 py-2 md:py-6">
                             <div class="flex ">
                                 <!--Button to open the sidebar-->
-                                <button class="md:p-1 md:mr-4 flex items-start" :class="{ 'hidden': sidebarOpen }" @click="sidebarOpen = !sidebarOpen">
+                                <button class="md:p-1 md:mr-4 flex items-start text-secondary-400" :class="{ 'hidden': sidebarOpen }" @click="sidebarOpen = !sidebarOpen">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7" />
                                     </svg>
@@ -508,10 +499,8 @@
         <!-- /End replace -->
         </div>
 
-        </main>
         </div>
 
-        </div>
         </div>
         <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
     {% endif %}
