sidebar separated and called inside home

--- a/crud/templates/base_crud.html
+++ b/crud/templates/base_crud.html
@@ -5,8 +5,15 @@
     <title>Django post crud example</title>
 {% endblock %}
 
+{% block navbar %}
+    {% include 'head_sidebar.html' %}
+{% endblock %}
 {% block content %}
     <header class='postList'>
         <h1><a href="{% url 'home' %}">Django blog</a></h1>
     </header>
-{% endblock content %}
+
+{% endblock %}
+{% block end_navbar %}
+    {% include 'end_sidebar.html' %}
+{% endblock %}
