gray and indigo changed to primary and secondary

--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -11,15 +11,15 @@
             <div class="flex ">
                 <!--Button to open the sidebar-->
                 <div class="md:flex-auto ml-2">
-                    <h1 class="text-xl font-semibold text-gray-900">Posts</h1>
-                    <p class="mt-2 text-sm text-gray-700">A list of all the posts including main characteristics.</p>
+                    <h1 class="text-xl font-semibold text-secondary-900">Posts</h1>
+                    <p class="mt-2 text-sm text-secondary-700">A list of all the posts including main characteristics.</p>
                 </div>
             </div>
             <div class="flex md:justify-end items-center">
                 {% include 'search_bar.html' %}
                 <!--ADD POST-->
                 <div class="sm:mt-0 sm:ml-8 sm:flex-none ">
-                    <a href="{% url 'post_create' %}" id="post_add"> <button type="button" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-700 px-4 ml-2 py-2 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:w-auto">Add Post</button></a>
+                    <a href="{% url 'post_create' %}" id="post_add"> <button type="button" class="inline-flex justify-center rounded-md border border-transparent bg-primary-700 px-4 ml-2 py-2 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 sm:w-auto">Add Post</button></a>
                 </div>
             </div>
 
