--- a/crud/templates/post_delete.html
+++ b/crud/templates/post_delete.html
@@ -42,7 +42,7 @@
         From: "opacity-100"
         To: "opacity-0"
     -->
-            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
+            <div class="fixed inset-0 bg-primary-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
 
             <!-- This element is to trick the browser into centering the modal contents. -->
             <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
@@ -67,20 +67,20 @@
                             </svg>
                         </div>
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Erase object</h3>
+                            <h3 class="text-lg leading-6 font-medium text-primary-900" id="modal-title">Erase object</h3>
                             <div class="mt-2">
-                                <p class="text-sm text-gray-500">Are you sure you want to erase this object? All of your data will be permanently removed. <br><br>   This action cannot be undone.</p>
+                                <p class="text-sm text-primary-500">Are you sure you want to erase this object? All of your data will be permanently removed. <br><br>   This action cannot be undone.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                <div class="bg-primary-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                     <form action="" method="post">
                         {% csrf_token %}
                         <button type="submit" id="submit_delete_post"
                             class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-danger-600 text-base font-medium text-white hover:bg-danger-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-danger-500 sm:ml-3 sm:w-auto sm:text-sm">Deactivate</button>
                         <a href="{% url 'home' %}">
-                            <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
+                            <button type="button" class="mt-3 w-full inline-flex justify-center rounded-md border border-primary-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-primary-700 hover:bg-primary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
                         </a>
                     </form>
                 </div>
