--- a/crud/templates/table_search_pagination.html
+++ b/crud/templates/table_search_pagination.html
@@ -4,13 +4,13 @@
             <div class="inline-block min-w-full py-2 align-middle">
                 <div class="shadow-sm ring-1 ring-black ring-opacity-5">
                     <table class="min-w-full border-separate" style="border-spacing: 0">
-                        <thead class="bg-gray-50">
+                        <thead class="bg-secondary-50">
                             <tr>
-                                <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Id</th>
-                                <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Title</th>
-                                <th scope="col" class="sticky top-0 z-10 hidden border-b border-gray-300 bg-gray-50 bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell">Created Date</th>
-                                <th scope="col" class="sticky top-0 z-10 hidden border-b border-gray-300 bg-gray-50 bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell">Body</th>
-                                <th scope="col" class="sticky top-0 z-10 border-b border-gray-300 bg-gray-50 bg-opacity-75 py-3.5 pr-4 pl-3 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
+                                <th scope="col" class="sticky top-0 z-10 border-b border-secondary-300 bg-secondary-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-secondary-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Id</th>
+                                <th scope="col" class="sticky top-0 z-10 border-b border-secondary-300 bg-secondary-50 bg-opacity-75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-secondary-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8">Title</th>
+                                <th scope="col" class="sticky top-0 z-10 hidden border-b border-secondary-300 bg-secondary-50 bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-secondary-900 backdrop-blur backdrop-filter sm:table-cell">Created Date</th>
+                                <th scope="col" class="sticky top-0 z-10 hidden border-b border-secondary-300 bg-secondary-50 bg-opacity-75 px-3 py-3.5 text-left text-sm font-semibold text-secondary-900 backdrop-blur backdrop-filter lg:table-cell">Body</th>
+                                <th scope="col" class="sticky top-0 z-10 border-b border-secondary-300 bg-secondary-50 bg-opacity-75 py-3.5 pr-4 pl-3 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8">
                                     <span class="sr-only">Edit</span>
                                     <span class="sr-only">Delete</span>
                                     <span class="sr-only">View</span>
