colors complete with border fixed

--- a/crud/templates/head_sidebar.html
+++ b/crud/templates/head_sidebar.html
@@ -21,7 +21,7 @@
             <!--mobile menu content-->
             <div class="flex-1 h-0 pt-5 pb-4 overflow-y-auto">
                 <div class="flex-shrink-0 flex items-center px-4">
-                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-primary-600-mark-secondary-800-text.svg" alt="Workflow">
+                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg" alt="Workflow">
                 </div>
                 <nav class="mt-5 px-2 space-y-1">
 
@@ -230,10 +230,10 @@
         <div class="hidden md:flex md:flex-col md:fixed md:inset-y-0">
 
             <div class="w-64 flex-shrink-0 transition-all duration-300" :class="{ '-ml-64': !sidebarOpen }">
-                <div  class="flex-1 flex flex-col min-h-0 border-r border-secondary-200 bg-white">
+                <div  class="flex-1 flex flex-col h-screen border-r border-secondary-200 bg-white">
                     <div class="flex-1 flex flex-col pt-5 pb-4">
                         <div class="flex justify-between items-center flex-shrink-0 px-4">
-                            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-secondary-800-text.svg" alt="Workflow">
+                            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/workflow-logo-indigo-600-mark-gray-800-text.svg" alt="Workflow">
                             <!--Button to Collapse the sidebar-->
                             <button class="text-secondary-400" @click="sidebarOpen = !sidebarOpen">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
