--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -10,7 +10,7 @@
         <div class="w-full flex-col md:flex-row md:items-center px-2 py-2 md:py-6">
             <div class="flex ">
                 <!--Button to open the sidebar-->
-                <div class="md:flex-auto ml-2">
+                <div class="md:flex-auto ml-2 pl-2">
                     <h1 class="text-xl font-semibold text-secondary-900">Posts</h1>
                     <p class="mt-2 text-sm text-secondary-700">A list of all the posts including main characteristics.</p>
                 </div>
