--- a/crud/templates/pagination.html
+++ b/crud/templates/pagination.html
@@ -2,7 +2,7 @@
     <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
 
         <div>
-            <p class="text-sm text-primary-700">
+            <p class="text-sm text-secondary-700">
                 <span class="font-medium">{{ page_obj.paginator.count }}</span>
                 total records
             </p>
@@ -12,20 +12,20 @@
     <!-- PAGINATOR -->
 {% else %}
     <!-- This example requires Tailwind CSS v2.0+ -->
-    <div class="pagination bg-white px-4 py-3 flex items-center justify-between border-t border-primary-200 sm:px-6">
+    <div class="pagination bg-white px-4 py-3 flex items-center justify-between border-t border-secondary-200 sm:px-6">
         <div class="flex-1 flex justify-between sm:hidden">
             {% if page_obj.has_previous %}
-                <a href="?page={{ page_obj.previous_page_number }}&q={{ query }}" class="relative inline-flex items-center px-4 py-2 border border-primary-300 text-sm font-medium rounded-md text-primary-700 bg-white hover:bg-primary-50"> Previous </a>
+                <a href="?page={{ page_obj.previous_page_number }}&q={{ query }}" class="relative inline-flex items-center px-4 py-2 border border-secondary-300 text-sm font-medium rounded-md text-secondary-700 bg-white hover:bg-secondary-50"> Previous </a>
             {% endif %}
             {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}&q={{ query }}" class="ml-3 relative inline-flex items-center px-4 py-2 border border-primary-300 text-sm font-medium rounded-md text-primary-700 bg-white hover:bg-primary-50"> Next </a>
+                <a href="?page={{ page_obj.next_page_number }}&q={{ query }}" class="ml-3 relative inline-flex items-center px-4 py-2 border border-secondary-300 text-sm font-medium rounded-md text-secondary-700 bg-white hover:bg-secondary-50"> Next </a>
             {% endif %}
         </div>
 
         <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
 
             <div>
-                <p class="text-sm text-primary-700">
+                <p class="text-sm text-secondary-700">
                     Page
                     <span class="font-medium">{{ page_obj.number }}</span>
                     of
@@ -38,14 +38,14 @@
                 <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
 
                     {% if page_obj.has_previous %}
-                        <a href="?page=1&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-primary-300 bg-white text-sm font-medium text-primary-500 hover:bg-primary-50">
+                        <a href="?page=1&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-secondary-300 bg-white text-sm font-medium text-secondary-500 hover:bg-secondary-50">
                             <span class="sr-only">Previous</span>
                             <!-- Heroicon name: solid/chevron-double-left -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M15.707 15.707a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414l5-5a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 010 1.414zm-6 0a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414l5-5a1 1 0 011.414 1.414L5.414 10l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
                             </svg>
                         </a>
-                        <a href="?page={{ page_obj.previous_page_number }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-primary-300 bg-white text-sm font-medium text-primary-500 hover:bg-primary-50">
+                        <a href="?page={{ page_obj.previous_page_number }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-secondary-300 bg-white text-sm font-medium text-secondary-500 hover:bg-secondary-50">
                             <span class="sr-only">Previous</span>
                             <!-- Heroicon name: solid/chevron-left -->
                             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -56,21 +56,21 @@
                     {% if page_obj.paginator.num_pages <= 10 %}
                         {% for i in paginator.page_range %}
                             {% if page_obj.number == i %}
-                                <a href="#" aria-current="page" class="z-10 bg-primary-50 border-primary-500 text-primary-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">{{ i }}</a>
+                                <a href="#" aria-current="page" class="z-10 bg-secondary-50 border-secondary-500 text-secondary-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">{{ i }}</a>
                             {% else %}
                                 <a href="?page={{ i }}&q={{ query }}" class="bg-white border-secondary-300 text-secondary-500 hover:bg-secondary-50 hidden md:inline-flex relative items-center px-4 py-2 border text-sm font-medium"> {{ i }} </a>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
                     {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-primary-300 bg-white text-sm font-medium text-primary-500 hover:bg-primary-50">
+                        <a href="?page={{ page_obj.next_page_number }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-secondary-300 bg-white text-sm font-medium text-secondary-500 hover:bg-secondary-50">
                             <span class="sr-only">Next</span>
                             <!-- Heroicon name: solid/chevron-right -->
                             <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
                             </svg>
                         </a>
-                        <a href="?page={{ page_obj.paginator.num_pages }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-primary-300 bg-white text-sm font-medium text-primary-500 hover:bg-primary-50">
+                        <a href="?page={{ page_obj.paginator.num_pages }}&q={{ query }}" class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-secondary-300 bg-white text-sm font-medium text-secondary-500 hover:bg-secondary-50">
                             <span class="sr-only">Next</span>
                             <!-- Heroicon name: solid/chevron-right -->
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
