--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -2,7 +2,7 @@
 {% extends "base_crud.html" %}
 
 
-{% block content %}
+{% block sidecontent %}
     <!-- This example requires Tailwind CSS v2.0+ -->
 
     <div class="md:w-full px-2 md:flex md:flex-col">
@@ -27,4 +27,4 @@
         </div>
     </div>
 
-{% endblock content %}
+{% endblock sidecontent %}
