--- a/crud/templates/post_create.html
+++ b/crud/templates/post_create.html
@@ -1,6 +1,6 @@
 {% extends "base_crud.html" %}
 
-{% block content %}
+{% block sidecontent %}
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class= "container mx-auto ">
@@ -61,4 +61,4 @@
             </div>
         </div>
     </div>
-{% endblock content %}
+{% endblock sidecontent %}
