--- a/crud/templates/post_edit.html
+++ b/crud/templates/post_edit.html
@@ -1,6 +1,6 @@
 {% extends "base_crud.html" %}
 
-{% block content %}
+{% block sidecontent %}
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class= "container mx-auto ">
@@ -64,4 +64,4 @@
     </div>
 
 
-{% endblock content %}
+{% endblock sidecontent %}
