small updates for front

--- a/crud/templates/post_create.html
+++ b/crud/templates/post_create.html
@@ -35,7 +35,7 @@
                                     <div class="sm:col-span-6">
                                         <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.body.label}} </label>
                                         <div class="mt-1 p-2">
-                                            <textarea id="body" name="{{ form.body.name }}" rows="3" class="max-w-lg p-2 shadow-sm block w-full focus:ring-primary-500 focus:border-primary-500 sm:text-sm border border-primary-300 rounded-md"></textarea>
+                                            <textarea id="body" name="{{ form.body.name }}" rows="3" class="max-w-lg p-2 shadow-sm block w-full focus:ring-primary-400 sm:text-sm border rounded-md"></textarea>
 
                                         </div>
                                         <p class="mt-2 text-sm text-secondary-500">Create your post content.</p>
