--- a/crud/templates/head_sidebar.html
+++ b/crud/templates/head_sidebar.html
@@ -243,7 +243,7 @@
                         </div>
                         <nav class="mt-5 px-2 bg-white space-y-1">
 
-                            <a href="#" class="bg-secondary-100 text-secondary-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" x-state:on="Current" x-state:off="Default" x-state-description="Current: &quot;bg-secondary-100 text-secondary-900&quot;, Default: &quot;text-secondary-600 hover:bg-secondary-50 hover:text-secondary-900&quot;">
+                            <a href="#" class="text-secondary-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" x-state:on="Current" x-state:off="Default" x-state-description="Current: &quot;bg-secondary-100 text-secondary-900&quot;, Default: &quot;text-secondary-600 hover:bg-secondary-50 hover:text-secondary-900&quot;">
                                 <svg class="text-secondary-500 mr-3 flex-shrink-0 h-6 w-6" x-state:on="Current" x-state:off="Default" x-state-description="Current: &quot;text-secondary-500&quot;, Default: &quot;text-secondary-400 group-hover:text-secondary-500&quot;" x-description="Heroicon name: outline/home" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
                                 </svg>
@@ -431,7 +431,7 @@
                             </div>
                         </nav>
                         <!--logout-->
-                        <div class="fixed bottom-0 w-64 flex-shrink-0 flex border-t border-secondary-200 p-2">
+                        <div class="fixed bottom-0 w-60 flex-shrink-0 flex border-t border-secondary-200 p-2">
                             <div class="text-secondary-900 cursor-pointer">
                                 <a href="{% url 'logout'%}" id="logout">
                                     <button type="button" class="bg-white text-secondary-600 hover:bg-secondary-50 hover:text-red-500 group w-full flex items-center pl-2 pr-1 py-2 text-left text-sm font-medium rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500">
