sidebar size minimized

--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -7,7 +7,7 @@
 
     <div class="md:w-full px-2 md:flex md:flex-col">
 
-        <div class="w-full flex-col md:flex-row md:items-center px-2 py-2 md:py-6">
+        <div class="w-full flex-col md:flex-row md:items-center py-2 md:py-6">
             <div class="flex ">
                 <!--Button to open the sidebar-->
                 <div class="md:flex-auto ml-2 pl-2">
