push to another new branch

--- a/crud/templates/head_sidebar.html
+++ b/crud/templates/head_sidebar.html
@@ -258,7 +258,7 @@
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path>
                                         </svg>
                                         <span class="">
-                                            Team
+                                            File
                                         </span>
                                     </div>
                                     <svg class="ml-3 flex-shrink-0 h-5 w-5 transform group-hover:text-secondary-400 transition-colors ease-in-out duration-150 text-secondary-400 rotate-90" viewBox="0 0 20 20" x-state:on="Expanded" x-state:off="Collapsed" aria-hidden="true" :class="{ 'text-secondary-400 rotate-90': open, 'text-secondary-300': !(open) }">
@@ -267,12 +267,12 @@
                                 </button>
                                 <div x-description="Expandable link section, show/hide based on state." class="space-y-1" id="sub-menu-1" x-show="open">
 
-                                    <a href="#" class="group w-full flex items-center pl-11 pr-2 py-2 text-sm font-medium text-secondary-600 rounded-md hover:text-secondary-900 hover:bg-secondary-50">
-                                        Overview
+                                    <a href="{% url 'file_list' %}" class="group w-full flex items-center pl-11 pr-2 py-2 text-sm font-medium text-secondary-600 rounded-md hover:text-secondary-900 hover:bg-secondary-50">
+                                        file list
                                     </a>
 
-                                    <a href="#" class="group w-full flex items-center pl-11 pr-2 py-2 text-sm font-medium text-secondary-600 rounded-md hover:text-secondary-900 hover:bg-secondary-50">
-                                        Members
+                                    <a href="{% url 'file_add' %}" class="group w-full flex items-center pl-11 pr-2 py-2 text-sm font-medium text-secondary-600 rounded-md hover:text-secondary-900 hover:bg-secondary-50">
+                                        file add
                                     </a>
 
                                     <a href="#" class="group w-full flex items-center pl-11 pr-2 py-2 text-sm font-medium text-secondary-600 rounded-md hover:text-secondary-900 hover:bg-secondary-50">
