--- a/crud/templates/post_create.html
+++ b/crud/templates/post_create.html
@@ -1,7 +1,10 @@
 {% extends "base_crud.html" %}
 
 {% block sidecontent %}
-
+    <!--For datepicker-->
+    {% comment %} {% block css-spl %}
+<link rel="stylesheet" href="https://unpkg.com/@themesberg/flowbite@1.3.0/dist/flowbite.min.css" />
+{% endblock  %} {% endcomment %}
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div class= "container mx-auto ">
 
@@ -18,47 +21,63 @@
                                     <p class="mt-1 text-sm text-secondary-500">You can create your post.</p>
                                 </div>
 
-                                <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-
-                                    <!--Title-->
-                                    <div class="sm:col-span-4">
-                                        <div class="mt-1 flex rounded-md shadow-sm">
-                                            <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-secondary-300 bg-secondary-50 text-secondary-500 sm:text-sm"> Title</span>
-                                            <input type="text" name="{{ form.title.html_name }}" id="title" value=""
-                                                class="flex-1 focus:ring-primary-500 focus:border-primary-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-secondary-300">
-                                        </div>
-                                        {% for error in form.title.errors %}
-                                            <div class="invalid-feedback d-block text-end"><span class="text-red-500 text-xs italic">{{ error }}</span></div>
-                                        {% endfor %}
+                                <!--datepicker :TODO not working as expected-->
+                                {% comment %} <div class="relative">
+                                    <label for="{{ form.post_date.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.post_date.label}} </label>
+                                    <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
+                                      <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"></path></svg>
                                     </div>
-                                    <!--body-->
-                                    <div class="sm:col-span-6">
-                                        <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.body.label}} </label>
-                                        <div class="mt-1 p-2">
-                                            <textarea id="body" name="{{ form.body.name }}" rows="3" class="max-w-lg p-2 shadow-sm block w-full focus:ring-primary-400 sm:text-sm border rounded-md"></textarea>
+                                    <input datepicker datepicker-buttons name="{{ form.post_date.html_name }}" id="{{ form.post_date.id_for_label }}" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Select date">
+                                  </div> {% endcomment %}
 
-                                        </div>
-                                        <p class="mt-2 text-sm text-secondary-500">Create your post content.</p>
-                                        {% for error in form.body.errors %}
-                                            <div class="invalid-feedback d-block text-end"><span class="text-red-500 text-xs italic">{{ error }}</span>
-                                            </div>
-                                        {% endfor %}
+
+                                <!--Title-->
+                                <div class="sm:col-span-4">
+                                    <div class="mt-1 flex rounded-md shadow-sm">
+                                        <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-secondary-300 bg-secondary-50 text-secondary-500 sm:text-sm"> Title</span>
+                                        <input type="text" name="{{ form.title.html_name }}" id="title" value=""
+                                            class="flex-1 focus:ring-primary-500 focus:border-primary-500 block w-full min-w-0 rounded-none rounded-r-md sm:text-sm border-secondary-300">
                                     </div>
+                                    {% for error in form.title.errors %}
+                                        <div class="invalid-feedback d-block text-end"><span class="text-red-500 text-xs italic">{{ error }}</span></div>
+                                    {% endfor %}
                                 </div>
-                                <div class="pt-5">
-                                    <div class="flex justify-end">
-                                        <a href="{% url 'home' %}">
-                                            <button type="button" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
-                                                Cancel
-                                            </button></a>
-                                        <button type="submit" id="submit_add_post" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Save</button>
+
+                                <!-- component -->
+
+                                <!--body-->
+                                <div class="sm:col-span-6">
+                                    <label for="{{ form.body.id_for_label }}" class="block text-sm font-medium text-secondary-700"> {{form.body.label}} </label>
+                                    <div class="mt-1 p-2">
+                                        <textarea id="body" name="{{ form.body.name }}" rows="3" class="max-w-lg p-2 shadow-sm block w-full focus:ring-primary-400 sm:text-sm border rounded-md"></textarea>
+
                                     </div>
+                                    <p class="mt-2 text-sm text-secondary-500">Create your post content.</p>
+                                    {% for error in form.body.errors %}
+                                        <div class="invalid-feedback d-block text-end"><span class="text-red-500 text-xs italic">{{ error }}</span>
+                                        </div>
+                                    {% endfor %}
                                 </div>
                             </div>
-                        </form>
-                    </div>
+                            <div class="pt-5">
+                                <div class="flex justify-end">
+                                    <a href="{% url 'home' %}">
+                                        <button type="button" class="bg-white py-2 px-4 border border-secondary-300 rounded-md shadow-sm text-sm font-medium text-secondary-700 hover:bg-secondary-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
+                                            Cancel
+                                        </button></a>
+                                    <button type="submit" id="submit_add_post" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-primary-600 hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">Save</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
+    {% comment %} //new for Date picker {% endcomment %}
+    {% block js_spl %}
+        <script src="https://unpkg.com/flowbite@1.4.1/dist/datepicker.js"></script>
+    {% endblock %}
 {% endblock sidecontent %}
