--- a/theme/templates/base_tailwind.html
+++ b/theme/templates/base_tailwind.html
@@ -16,11 +16,15 @@
         {% tailwind_css %}
 
         {% block custom_css %}
-            <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+            {% comment %} <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> {% endcomment %}
         {% endblock custom_css %}
 
         {% block custom_js %}
             <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+
+
         {% endblock custom_js %}
 
     </head>
