--- a/crud/templates/post_delete.html
+++ b/crud/templates/post_delete.html
@@ -69,7 +69,7 @@
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                             <h3 class="text-lg leading-6 font-medium text-secondary-900" id="modal-title">Erase object</h3>
                             <div class="mt-2">
-                                <p class="text-sm text-secondary-500">Are you sure you want to erase this object? All of your data will be permanently removed. <br><br>   This action cannot be undone.</p>
+                                <p class="text-sm text-secondary-500">Are you sure you want to erase this object? All the related data will be permanently removed. <br><br>   This action cannot be undone.</p>
                             </div>
                         </div>
                     </div>
