padding top added to searchbar and addpost when small

--- a/crud/templates/home.html
+++ b/crud/templates/home.html
@@ -15,7 +15,7 @@
                     <p class="mt-2 text-sm text-secondary-700">A list of all the posts including main characteristics.</p>
                 </div>
             </div>
-            <div class="flex md:justify-end items-center pr-2">
+            <div class="flex md:justify-end items-center pt-4 md:pt-0 pr-2 ">
                 {% include 'search_bar.html' %}
                 <!--ADD POST-->
                 <div class="sm:mt-0 sm:ml-8 sm:flex-none">
